--- a/css/style.css
+++ b/css/style.css
@@ -2977,3 +2977,57 @@ figure figcaption {
     position: relative;
     top: 1px;
 }
+
+ul.nav-pills {
+    top: 20px;
+    position: fixed;
+}
+
+div.col-8 div {
+    height: 500px;
+}
+
+
+/* TEST */
+
+
+/*
+flip card
+*/
+
+#catch-section {
+    margin-top: 5%;
+    background-color: #a2c0be;
+}
+
+.card-flip>div {
+    backface-visibility: hidden;
+    transition: transform 300ms;
+    transition-timing-function: linear;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    display: flex;
+}
+
+.card-front {
+    transform: rotateY(0deg);
+}
+
+.card-back {
+    transform: rotateY(180deg);
+    position: absolute;
+    top: 0;
+}
+
+.card-flip:hover .card-front {
+    transform: rotateY(-180deg);
+}
+
+.card-flip:hover .card-back {
+    transform: rotateY(0deg);
+}
+
+.card-title {
+    /* color: #2b2b2b; */
+}
